wtf is happening

--- a/index.html
+++ b/index.html
@@ -293,4 +293,137 @@
                      controls
                      muted
                      preload="metadata"
-      
+                     poster="./assets/music/vool/vool-poster.jpg"
+                     playsinline>
+                <source src="./assets/music/vool/vool-playthrough.mp4" type="video/mp4">
+              </video>
+            </div>
+          </div>
+        </div>
+
+        <div class="work-copy">
+          <h3 class="work-title">vool — figma prototype</h3>
+          <p class="work-text">[placeholder] what VOOL is (concert memory / local scenes) + what the prototype demonstrates.</p>
+          <p class="work-text muted">[placeholder] interaction notes: what’s clickable, what flow you’re showing, what you learned.</p>
+<div class="vool-placeholders">
+  <img src="./assets/music/vool/vool-process-1.jpg" alt="VOOL process sketch">
+  <img src="./assets/music/vool/vool-process-2.jpg" alt="VOOL process sketch">
+  <img src="./assets/music/vool/vool-process-3.jpg" alt="VOOL process sketch">
+</div>
+
+
+        </div>
+      </section>
+
+      <!-- 2) genre.exe — website playthrough -->
+      <section class="work-row" data-work="genre">
+        <div class="work-media">
+          <div class="thumb-row thumb-row--single">
+            <div class="thumb thumb--wide" aria-label="genre.exe website video">
+              <video class="thumb-video thumb-video--wide"
+                     controls
+                     muted
+                     preload="metadata"
+                     poster="./assets/music/genre-exe/genre-exe-poster.jpg"
+                     playsinline>
+                <source src="./assets/music/genre-exe/genre-exe-playthrough.mp4" type="video/mp4">
+              </video>
+            </div>
+          </div>
+        </div>
+
+        <div class="work-copy">
+          <h3 class="work-title">genre.exe — genre as a network</h3>
+          <p class="work-text">[placeholder] critique: streaming platforms flatten genre into marketable labels.</p>
+          <p class="work-text muted">[placeholder] what you built instead: community tags + linked categories → a web, not a dropdown.</p>
+          <div class="proj-actions">
+            <a class="mini-btn" href="https://makdabekele.github.io/APIProject/" target="_blank" rel="noreferrer">open website</a>
+          </div>
+        </div>
+      </section>
+
+      <!-- 3) Edits — rhythm + mood studies -->
+<section class="work-row" data-work="edits">
+  <div class="work-media">
+    <div class="thumb-row thumb-row--edits">
+
+      <div class="edit-row">
+        <div class="thumb thumb--edit">
+          <video class="thumb-video" controls preload="metadata" playsinline
+                 poster="./assets/music/edits/spiderman-poster.jpg">
+            <source src="./assets/music/edits/spiderman.mp4" type="video/mp4">
+          </video>
+        </div>
+        <p class="edit-note">[placeholder] falling as momentum — testing pacing against vertical motion</p>
+      </div>
+
+      <div class="edit-row">
+        <div class="thumb thumb--edit">
+          <video class="thumb-video" controls preload="metadata" playsinline
+                 poster="./assets/music/edits/vi-poster.jpg">
+            <source src="./assets/music/edits/vi.mp4" type="video/mp4">
+          </video>
+        </div>
+        <p class="edit-note">[placeholder] emotional whiplash — contrast, silence, and restraint</p>
+      </div>
+
+      <div class="edit-row">
+        <div class="thumb thumb--edit">
+          <video class="thumb-video" controls preload="metadata" playsinline
+                 poster="./assets/music/edits/third-poster.jpg">
+            <source src="./assets/music/edits/third.mp4" type="video/mp4">
+          </video>
+        </div>
+        <p class="edit-note">[placeholder] texture over clarity — distortion as mood carrier</p>
+      </div>
+
+    </div>
+  </div>
+
+  <div class="work-copy">
+    <h3 class="work-title">edits — rhythm + mood studies</h3>
+    <p class="work-text">[placeholder] why you edit: compress story into motion, timing, and music.</p>
+    <p class="work-text muted">[placeholder] what you’re testing: pacing, transitions, emotional contrast, texture.</p>
+  </div>
+</section>
+
+    </div>
+  </div>
+</section>
+
+
+<!-- Panel: ARCHIVE -->
+<section class="panel" role="tabpanel" aria-labelledby="tab-archive" data-panel="archive" hidden>
+  <div class="panel-inner panel-scroll">
+    <header class="panel-head">
+      <h2 class="panel-title">archive</h2>
+      <p class="panel-sub">coming soon</p>
+    </header>
+
+    <div class="proj-list">
+      <div class="placeholder">
+        <div class="ph-title">Archive</div>
+        <div class="ph-sub">coming soon</div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+          <!-- Panel: ARCHIVE -->
+          <section class="panel" role="tabpanel" aria-labelledby="tab-archive" data-panel="archive" hidden>
+            <div class="panel-inner">
+              <div class="placeholder">
+                <div class="ph-title">Archive</div>
+                <div class="ph-sub">coming soon</div>
+              </div>
+            </div>
+          </section>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <script src="main.js"></script>
+</body>
+</html>
