starting on font sizing adjustments

--- a/index.html
+++ b/index.html
@@ -343,49 +343,44 @@
       </section>
 
       <!-- 3) Edits — rhythm + mood studies -->
-<section class="work-row" data-work="edits">
-  <div class="work-media">
-    <div class="thumb-row thumb-row--edits">
+<!-- 3) Edits — rhythm + mood studies -->
+<section class="work-row edits-grid" data-work="edits">
 
-      <div class="edit-row">
-        <div class="thumb thumb--edit">
-          <video class="thumb-video" controls preload="metadata" playsinline
-                 poster="./assets/music/edits/spiderman-poster.jpg">
-            <source src="./assets/music/edits/spiderman.mp4" type="video/mp4">
-          </video>
-        </div>
-        <p class="edit-note">[placeholder] falling as momentum — testing pacing against vertical motion</p>
-      </div>
-
-      <div class="edit-row">
-        <div class="thumb thumb--edit">
-          <video class="thumb-video" controls preload="metadata" playsinline
-                 poster="./assets/music/edits/vi-poster.jpg">
-            <source src="./assets/music/edits/vi.mp4" type="video/mp4">
-          </video>
-        </div>
-        <p class="edit-note">[placeholder] emotional whiplash — contrast, silence, and restraint</p>
-      </div>
-
-      <div class="edit-row">
-        <div class="thumb thumb--edit">
-          <video class="thumb-video" controls preload="metadata" playsinline
-                 poster="./assets/music/edits/third-poster.jpg">
-            <source src="./assets/music/edits/third.mp4" type="video/mp4">
-          </video>
-        </div>
-        <p class="edit-note">[placeholder] texture over clarity — distortion as mood carrier</p>
-      </div>
-
-    </div>
+  <!-- Row 1 -->
+  <div class="edit-video">
+    <video class="edit-video-el" controls preload="metadata" playsinline
+           poster="./assets/music/edits/edit-spiderman-1-poster.jpg">
+      <source src="./assets/music/edits/edit-spiderman-1.mp4" type="video/mp4">
+    </video>
   </div>
 
-  <div class="work-copy">
+  <div class="edit-copy edit-copy--first">
     <h3 class="work-title">edits — rhythm + mood studies</h3>
-    <p class="work-text">[placeholder] why you edit: compress story into motion, timing, and music.</p>
-    <p class="work-text muted">[placeholder] what you’re testing: pacing, transitions, emotional contrast, texture.</p>
+    <p class="edit-cap">[placeholder] falling as momentum — testing pacing against vertical motion</p>
   </div>
+
+  <!-- Row 2 -->
+  <div class="edit-video">
+    <video class="edit-video-el" controls preload="metadata" playsinline
+           poster="./assets/music/edits/edit-vi-arcane-poster.jpg">
+      <source src="./assets/music/edits/edit-vi-arcane.mp4" type="video/mp4">
+    </video>
+  </div>
+
+  <p class="edit-cap">[placeholder] emotional whiplash — contrast, silence, and restraint</p>
+
+  <!-- Row 3 -->
+  <div class="edit-video">
+    <video class="edit-video-el" controls preload="metadata" playsinline
+           poster="./assets/music/edits/edit-spiderman-2-poster.jpg">
+      <source src="./assets/music/edits/edit-spiderman-2.mp4" type="video/mp4">
+    </video>
+  </div>
+
+  <p class="edit-cap">[placeholder] texture over clarity — distortion as mood carrier</p>
+
 </section>
+
 
     </div>
   </div>
