saving for saves sake

--- a/index.html
+++ b/index.html
@@ -73,24 +73,23 @@
   <h2 class="about-title">hi, i’m makda.</h2>
 
   <p class="about-text">
-    I’m Makda, a junior studying Interaction Design and Economics at GWU. My inspiration come from the 
-    media I consume ranging from games to music to kids cartoons. Even this website design was inspired by AdHoc Studio's game
-    Dispatch (more specifically the hacking minigame module). 
+    I’m Makda, a junior studying Interaction Design and Economics at GWU. 
+    My work is shaped by the media I've consumed — games, music, and animated shows.Even this 
+    website design was inspired by AdHoc Studio's game Dispatch (more specifically the hacking minigame module). 
   </p>
 
   <p class="about-text">
-    Kanye once told a story about coffee tables. How a two-year-old jumps on one,
-    imagining themself Superman before being told to get down. A coffee table becomes less 
-    about possibility and more about rules, and over time those rules quietly determine 
-    which risks feel acceptable. Design works the same way. Foundations matter, so we don't fall
-    through the floor, so we have a safety net. But the goal isn’t obedient conformity. It’s remembering 
-    why we jumped in the first place. 
+    Kanye once told a story about a two-year-old jumping on a coffee table. Someone yells,
+     “Get down,” and the table goes from being something that made them feel like Superman 
+     to something you have to think about. Over time, you collect all these 
+     coffee tables, constantly calculating yourself into mental traffic.
   </p>
 
   <p class="about-text">
-    That awareness guides my work. I design with intention around flow, engagement, 
-    and accessibility — mindful that even subtle interface decisions can encourage 
-    exploration or shut it down.
+    Rules matter; foundations keep us from falling through the floor. But the goal isn't obedient 
+    conformity — it's remembering why we jumped in the first place. That way of thinking
+     carries through my work itself — jumping between posters, video editing, code, and concert spaces,
+    not as separate disciplines but an encouragement of exploration and complexity.
   </p>
 
   <p class="about-text about-text--muted">
@@ -167,16 +166,16 @@
       <a class="thumb" data-cap="1" href="./assets/identity/dbr-1.png" target="_blank" rel="noreferrer"><img src="./assets/identity/dbr-1.png" alt="Days Before Rodeo poster 1"></a>
       <a class="thumb" data-cap="2" href="./assets/identity/dbr-2.png" target="_blank" rel="noreferrer"><img src="./assets/identity/dbr-2.png" alt="Days Before Rodeo poster 2"></a>
       <a class="thumb" data-cap="3" href="./assets/identity/dbr-3.png" target="_blank" rel="noreferrer"><img src="./assets/identity/dbr-3.png" alt="Days Before Rodeo poster 3"></a>
-
+  
     </div>
   </div>
 
   <div class="work-copy">
-    <h3 class="work-title">days before rodeo — posters</h3>
+    <h3 class="work-title">B&W 8X11 PHOTOSHOP POSTER PROMOTING FICTIONAL EVENT</h3>
 <div class="work-notes">
-  <p class="work-note" data-cap="1">[01] placeholder — DBR poster 1 note (type/texture/hierarchy).</p>
-  <p class="work-note" data-cap="2">[02] placeholder — DBR poster 2 note (what changed + why).</p>
-  <p class="work-note" data-cap="3">[03] placeholder — DBR poster 3 note (system rule / takeaway).</p>
+  <p class="work-note" data-cap="1">[01] Captures the fiery energy of Travis Scott's Days Before Rodeo, with singed lettering and bold typography that mirror the raw, high-intensity sound of the mixtape. </p>
+  <p class="work-note" data-cap="2">[02] Inspired by the mixtape’s status as an unfinished project (only officially released a decade later) this design takes on a blueprint aesthetic. </p>
+  <p class="work-note" data-cap="3">[03] Dive into typographic hierarchy, where design takes precedence over readability. Intentionally obscures key details (i.e tour dates) challengingconventional promotional design. </p>
 </div>
   </div>
 </section>
@@ -218,7 +217,7 @@
   <div class="work-copy">
     <h3 class="work-title">posters + promo</h3>
     <div class="work-notes"> 
-      <p class="work-note" data-cap="1">[01] placeholder — misc poster 1 note (design choices / theme).</p>
+      <p class="work-note" data-cap="1">[01] Inspired by a prompt to create a magazine cover, I decided to reflect on my 2023 by visually summarizing key moments, with the idea that the magazine would dive deeper into the new year. </p>
       <p class="work-note" data-cap="2">[02] placeholder — misc poster 2 note (visual hierarchy / impact).</p>
       <p class="work-note" data-cap="3">[03] placeholder — promo video note (storyboard / editing).</p>
   </div>
