--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 <div class="work-notes">
   <p class="work-note" data-cap="1">[01] Captures the fiery energy of Travis Scott's Days Before Rodeo, with singed lettering and bold typography that mirror the raw, high-intensity sound of the mixtape. </p>
   <p class="work-note" data-cap="2">[02] Inspired by the mixtape’s status as an unfinished project (only officially released a decade later) this design takes on a blueprint aesthetic. </p>
-  <p class="work-note" data-cap="3">[03] Dive into typographic hierarchy, where design takes precedence over readability. Intentionally obscures key details (i.e tour dates) challengingconventional promotional design. </p>
+  <p class="work-note" data-cap="3">[03] Challenging conventional promotional design as design takes precedence over readability here. Hierachy and type study. </p>
 </div>
   </div>
 </section>
@@ -192,11 +192,11 @@
   </div>
 
   <div class="work-copy">
-    <h3 class="work-title">eyes — photoshop iterations</h3>
+    <h3 class="work-title">eyes — gestalt color study</h3>
     <div class="work-notes">
-      <p class="work-note" data-cap="1">[01] placeholder — eyes edit 1 note (color choice / mood).</p>
-      <p class="work-note" data-cap="2">[02] placeholder — eyes edit 2 note (composition / focus).</p>
-      <p class="work-note" data-cap="3">[03] placeholder — eyes edit 3 note (final tweaks / effects).</p>
+      <p class="work-note" data-cap="1">[01] Contrast of Cold and Warm.</p>
+      <p class="work-note" data-cap="2">[02] Contrast of Hue.</p>
+      <p class="work-note" data-cap="3">[03] Contrast of Complimentary.</p>
   </div>
 </section>
 
@@ -217,9 +217,9 @@
   <div class="work-copy">
     <h3 class="work-title">posters + promo</h3>
     <div class="work-notes"> 
-      <p class="work-note" data-cap="1">[01] Inspired by a prompt to create a magazine cover, I decided to reflect on my 2023 by visually summarizing key moments, with the idea that the magazine would dive deeper into the new year. </p>
-      <p class="work-note" data-cap="2">[02] placeholder — misc poster 2 note (visual hierarchy / impact).</p>
-      <p class="work-note" data-cap="3">[03] placeholder — promo video note (storyboard / editing).</p>
+      <p class="work-note" data-cap="1">[01] Inspired by a prompt to create a magazine cover, I reflect on my 2023 and practice fundamentals of color and gestalt principles. </p>
+      <p class="work-note" data-cap="2">[02] Any Amazing World of Gumball fans? The clown in the back is a reference to that character being a hidden easter egg lurking in a lot of the episodes.</p>
+      <p class="work-note" data-cap="3">[03] A buisiness frat at Virginia Tech wanted some promotional work for their murder mystery music video they were making to the song Nokia by Drake.</p>
   </div>
 </section>
 
@@ -246,9 +246,12 @@
   <div class="work-copy">
     <h3 class="work-title">nintendo connect — rebrand deck</h3>
     <div class="work-notes">
-      <p class="work-note" data-cap="1">[01] placeholder — deck note (structure / flow).</p>
-      <p class="work-note" data-cap="2">[02] placeholder — deck note (visual style / consistency).</p>
-      <p class="work-note" data-cap="3">[03] placeholder — deck note (key highlights / features).</p>
+      <p class="work-note" data-cap="1">[01] This branding project reimagined Nintendo through a
+fresh, community-focused identity that addresses the
+fragmented and siloed nature of its current ecosystem.
+Deliverables included a new logo system, brand typefaces,
+color palette, social media assets, and a a 3D-printed
+cartridge containing a user manual, and ad animation.</p>
   </div>
 </section>
 
@@ -264,8 +267,8 @@
   <div class="work-copy">
     <h3 class="work-title">logos — p-cart + ecdc women’s empowerment</h3>
     <div class="work-notes" >
-      <p class="work-note" data-cap="1">[01] placeholder — P-Cart logo note (concept / symbolism).</p>
-      <p class="work-note" data-cap="2">[02] placeholder — ECDC logo note (color palette / typography).</p>
+      <p class="work-note" data-cap="1">[01] Logo for the Postdoctoral Primary Care Research Training program at GW. </p>
+      <p class="work-note" data-cap="2">[02] Designed for the Women’s Empowerment division of the organization Ethiopian Community Development Council (ECDC).</p>
   </div>
 </section>
     </div>
@@ -302,8 +305,7 @@
 
         <div class="work-copy">
           <h3 class="work-title">vool — figma prototype</h3>
-          <p class="work-text">[placeholder] what VOOL is (concert memory / local scenes) + what the prototype demonstrates.</p>
-          <p class="work-text muted">[placeholder] interaction notes: what’s clickable, what flow you’re showing, what you learned.</p>
+          <p class="work-text">VOOL is a mobile app concept for logging and revisiting concerts you’ve attended. To the left is a playthrough of the prototype using my own concert photos. The idea stems from my frustration with trying to find specific shows in a camera roll where everything visually blurs together. I employed a design sprint methodology to inform the final design, including a focus group review.  </p>
 <div class="vool-placeholders">
   <img src="./assets/music/vool/vool-process-1.jpg" alt="VOOL process sketch">
   <img src="./assets/music/vool/vool-process-2.jpg" alt="VOOL process sketch">
@@ -329,15 +331,15 @@
               </video>
             </div>
           </div>
+          <div class="proj-actions" style="margin-top: 1.5em; text-align: center;">
+            <a class="mini-btn genre-btn-big" href="https://makdabekele.github.io/APIProject/" target="_blank" rel="noreferrer">open website</a>
+          </div>
         </div>
 
         <div class="work-copy">
-          <h3 class="work-title">genre.exe — genre as a network</h3>
-          <p class="work-text">[placeholder] critique: streaming platforms flatten genre into marketable labels.</p>
-          <p class="work-text muted">[placeholder] what you built instead: community tags + linked categories → a web, not a dropdown.</p>
-          <div class="proj-actions">
-            <a class="mini-btn" href="https://makdabekele.github.io/APIProject/" target="_blank" rel="noreferrer">open website</a>
-          </div>
+          <h3 class="work-title">genre.exe — Video Playthrough</h3>
+          <p class="work-text">Contemporary streaming platforms have effectively taken over genre classification, determining how music is labeled, grouped, and understood at scale. These classifications are not just a means for organization; they shape listener perception, influence recommendation systems, and solidify how songs and artists are culturally framed over time.</p>
+          <p class="work-text muted">genre.exe is a web-based genre exploration tool using iTunes, Last.Fm, and Wikipedia APIs. Searching a song returns community-generated tags from Last.fm rather than platform-assigned genres, shifting classification away from corporate systems and toward listener interpretation. Each tag links to its corresponding Wikipedia category, and if a tag doesn't have a wikipedia page, I included a note talking about how music creation is evolving past such rigid categorization.</p>
         </div>
       </section>
 
@@ -354,8 +356,8 @@
   </div>
 
   <div class="edit-copy edit-copy--first">
-    <h3 class="work-title">edits — rhythm + mood studies</h3>
-    <p class="edit-cap">[placeholder] falling as momentum — testing pacing against vertical motion</p>
+    <h3 class="work-title">edits — After Effects Practice</h3>
+    <p class="edit-cap">Combining sound, movement, and animation with live-action footage, this edit explores visual continuity between Spider-Verse and The Amazing Spider-Man. Song credits: That Girl by Yxng Dizzy (CHECK HIM OUT!!!)</p>
   </div>
 
   <!-- Row 2 -->
@@ -366,7 +368,7 @@
     </video>
   </div>
 
-  <p class="edit-cap">[placeholder] emotional whiplash — contrast, silence, and restraint</p>
+  <p class="edit-cap">An edit of Vi from Arcane built with layered overlays to amplify motion, rhythm, and visual intensity. Song credits: New Neon by Playboi Carti</p>
 
   <!-- Row 3 -->
   <div class="edit-video">
@@ -376,8 +378,8 @@
     </video>
   </div>
 
-  <p class="edit-cap">[placeholder] texture over clarity — distortion as mood carrier</p>
-
+  <p class="edit-cap">A Miles Morales edit focused on rotoscoping, framing, and visual continuity. Song credits: Don't Hold the Fire by SoFaygo</p>
+<p class="edit-cap">Animation, especially children’s media, is a major inspiration for me. Because it’s made for formative audiences, it’s often more intentional in its visual language and messaging.</p>
 </section>
 
 
