start on about me and think how to formate archive page

--- a/index.html
+++ b/index.html
@@ -74,24 +74,9 @@
 
   <p class="about-text">
     I’m Makda, a junior studying Interaction Design and Economics at GWU. 
-    My work is shaped by the media I've consumed — games, music, and animated shows.Even this 
+    My work is largely shaped by the media I consume — games, music, and animated shows.Even this 
     website design was inspired by AdHoc Studio's game Dispatch (more specifically the hacking minigame module). 
   </p>
-
-  <p class="about-text">
-    Kanye once told a story about a two-year-old jumping on a coffee table. Someone yells,
-     “Get down,” and the table goes from being something that made them feel like Superman 
-     to something you have to think about. Over time, you collect all these 
-     coffee tables, constantly calculating yourself into mental traffic.
-  </p>
-
-  <p class="about-text">
-    Rules matter; foundations keep us from falling through the floor. But the goal isn't obedient 
-    conformity — it's remembering why we jumped in the first place. That way of thinking
-     carries through my work itself — jumping between posters, video editing, code, and concert spaces,
-    not as separate disciplines but an encouragement of exploration and complexity.
-  </p>
-
   <p class="about-text about-text--muted">
     Tools: Photoshop • After Effects • Indesign + Illustrator • Figma 
   </p>
@@ -195,8 +180,8 @@
     <h3 class="work-title">eyes — gestalt color study</h3>
     <div class="work-notes">
       <p class="work-note" data-cap="1">[01] Contrast of Cold and Warm.</p>
-      <p class="work-note" data-cap="2">[02] Contrast of Hue.</p>
-      <p class="work-note" data-cap="3">[03] Contrast of Complimentary.</p>
+      <p class="work-note" data-cap="2">[02] Contrast of Complimentary.</p>
+      <p class="work-note" data-cap="3">[03] Contrast of Hue.</p>
   </div>
 </section>
 
@@ -288,7 +273,7 @@ cartridge containing a user manual, and ad animation.</p>
 
       <!-- 1) VOOL — Figma prototype playthrough -->
       <section class="work-row" data-work="vool">
-        <div class="work-media">
+        <div class="work-media" style="display: flex; flex-direction: row; align-items: flex-start; gap: 32px;">
           <div class="thumb-row thumb-row--single">
             <div class="thumb thumb--phone" aria-label="VOOL prototype video">
               <video class="thumb-video thumb-video--phone"
@@ -301,18 +286,23 @@ cartridge containing a user manual, and ad animation.</p>
               </video>
             </div>
           </div>
+          <div class="vool-name-origin" style="max-width: 320px; margin-top: 130px; margin-left: 22px;">
+            <strong>Name Origin</strong> — XXXTentacion popularly replaced words’ first letter with ‘v’; a popular example being ‘vro’. The app title references a specific line in his song <em>VERY RARE FOREVER FREESTYLE</em>:<br><br>
+            <span style="display:block; margin-left:1em; font-style:italic; color:rgba(233,238,252,0.7);">
+              “Ok<br>Ok so you vool”
+            </span><br>
+            Vool being ‘cool’ in this case.
+          </div>
         </div>
 
         <div class="work-copy">
           <h3 class="work-title">vool — figma prototype</h3>
           <p class="work-text">VOOL is a mobile app concept for logging and revisiting concerts you’ve attended. To the left is a playthrough of the prototype using my own concert photos. The idea stems from my frustration with trying to find specific shows in a camera roll where everything visually blurs together. I employed a design sprint methodology to inform the final design, including a focus group review.  </p>
-<div class="vool-placeholders">
-  <img src="./assets/music/vool/vool-process-1.jpg" alt="VOOL process sketch">
-  <img src="./assets/music/vool/vool-process-2.jpg" alt="VOOL process sketch">
-  <img src="./assets/music/vool/vool-process-3.jpg" alt="VOOL process sketch">
-</div>
-
-
+          <div class="vool-placeholders">
+            <img src="./assets/music/vool/vool-process-1.jpg" alt="VOOL process sketch">
+            <img src="./assets/music/vool/vool-process-2.jpg" alt="VOOL process sketch">
+            <img src="./assets/music/vool/vool-process-3.jpg" alt="VOOL process sketch">
+          </div>
         </div>
       </section>
 
@@ -393,32 +383,72 @@ cartridge containing a user manual, and ad animation.</p>
   <div class="panel-inner panel-scroll">
     <header class="panel-head">
       <h2 class="panel-title">archive</h2>
-      <p class="panel-sub">coming soon</p>
+      <p class="panel-sub">older works</p>
     </header>
 
     <div class="proj-list">
-      <div class="placeholder">
-        <div class="ph-title">Archive</div>
-        <div class="ph-sub">coming soon</div>
-      </div>
+      <!-- Archive deck: mouse-scroll carousel for GESTALTPORTFOLIOFINAL-pages PNGs -->
+      <section class="work-row work-row--deck">
+        <div class="work-media">
+          <div class="deck-rail" data-deck>
+            <div class="deck-track">
+              <img src="./assets/archive/GESTALTPORTFOLIOFINAL-pages-1-1.png" alt="Gestalt Portfolio page 1">
+              <img src="./assets/archive/GESTALTPORTFOLIOFINAL-pages-2-1.png" alt="Gestalt Portfolio page 2">
+              <img src="./assets/archive/GESTALTPORTFOLIOFINAL-pages-3-1.png" alt="Gestalt Portfolio page 3">
+              <img src="./assets/archive/GESTALTPORTFOLIOFINAL-pages-4-1.png" alt="Gestalt Portfolio page 4">
+              <img src="./assets/archive/GESTALTPORTFOLIOFINAL-pages-5-1.png" alt="Gestalt Portfolio page 5">
+              <img src="./assets/archive/GESTALTPORTFOLIOFINAL-pages-6-1.png" alt="Gestalt Portfolio page 6">
+              <img src="./assets/archive/GESTALTPORTFOLIOFINAL-pages-7-1.png" alt="Gestalt Portfolio page 7">
+              <img src="./assets/archive/GESTALTPORTFOLIOFINAL-pages-8-1.png" alt="Gestalt Portfolio page 8">
+              <img src="./assets/archive/GESTALTPORTFOLIOFINAL-pages-9-1.png" alt="Gestalt Portfolio page 9">
+              <img src="./assets/archive/GESTALTPORTFOLIOFINAL-pages-10-1.png" alt="Gestalt Portfolio page 10">
+              <img src="./assets/archive/GESTALTPORTFOLIOFINAL-pages-11-1.png" alt="Gestalt Portfolio page 11">
+              <img src="./assets/archive/GESTALTPORTFOLIOFINAL-pages-12-1.png" alt="Gestalt Portfolio page 12">
+              <img src="./assets/archive/GESTALTPORTFOLIOFINAL-pages-13-1.png" alt="Gestalt Portfolio page 13">
+              <img src="./assets/archive/GESTALTPORTFOLIOFINAL-pages-14-1.png" alt="Gestalt Portfolio page 14">
+              <img src="./assets/archive/GESTALTPORTFOLIOFINAL-pages-15-1.png" alt="Gestalt Portfolio page 15">
+              <img src="./assets/archive/GESTALTPORTFOLIOFINAL-pages-16-1.png" alt="Gestalt Portfolio page 16">
+              <img src="./assets/archive/GESTALTPORTFOLIOFINAL-pages-17-1.png" alt="Gestalt Portfolio page 17">
+              <img src="./assets/archive/GESTALTPORTFOLIOFINAL-pages-18-1.png" alt="Gestalt Portfolio page 18">
+              <img src="./assets/archive/GESTALTPORTFOLIOFINAL-pages-19-1.png" alt="Gestalt Portfolio page 19">
+              <img src="./assets/archive/GESTALTPORTFOLIOFINAL-pages-20-1.png" alt="Gestalt Portfolio page 20">
+              <img src="./assets/archive/GESTALTPORTFOLIOFINAL-pages-21-1.png" alt="Gestalt Portfolio page 21">
+              <img src="./assets/archive/GESTALTPORTFOLIOFINAL-pages-22-1.png" alt="Gestalt Portfolio page 22">
+              <img src="./assets/archive/GESTALTPORTFOLIOFINAL-pages-23-1.png" alt="Gestalt Portfolio page 23">
+              <img src="./assets/archive/GESTALTPORTFOLIOFINAL-pages-24-1.png" alt="Gestalt Portfolio page 24">
+              <img src="./assets/archive/GESTALTPORTFOLIOFINAL-pages-25-1.png" alt="Gestalt Portfolio page 25">
+              <img src="./assets/archive/GESTALTPORTFOLIOFINAL-pages-26-1.png" alt="Gestalt Portfolio page 26">
+              <img src="./assets/archive/GESTALTPORTFOLIOFINAL-pages-27-1.png" alt="Gestalt Portfolio page 27">
+              <img src="./assets/archive/GESTALTPORTFOLIOFINAL-pages-28-1.png" alt="Gestalt Portfolio page 28">
+              <img src="./assets/archive/GESTALTPORTFOLIOFINAL-pages-29-1.png" alt="Gestalt Portfolio page 29">
+              <img src="./assets/archive/GESTALTPORTFOLIOFINAL-pages-30-1.png" alt="Gestalt Portfolio page 30">
+              <img src="./assets/archive/GESTALTPORTFOLIOFINAL-pages-31-1.png" alt="Gestalt Portfolio page 31">
+              <img src="./assets/archive/GESTALTPORTFOLIOFINAL-pages-32-1.png" alt="Gestalt Portfolio page 32">
+              <img src="./assets/archive/GESTALTPORTFOLIOFINAL-pages-33-1.png" alt="Gestalt Portfolio page 33">
+              <img src="./assets/archive/GESTALTPORTFOLIOFINAL-pages-34-1.png" alt="Gestalt Portfolio page 34">
+              <img src="./assets/archive/GESTALTPORTFOLIOFINAL-pages-35-1.png" alt="Gestalt Portfolio page 35">
+              <img src="./assets/archive/GESTALTPORTFOLIOFINAL-pages-36-1.png" alt="Gestalt Portfolio page 36">
+              <img src="./assets/archive/GESTALTPORTFOLIOFINAL-pages-37-1.png" alt="Gestalt Portfolio page 37">
+              <img src="./assets/archive/GESTALTPORTFOLIOFINAL-pages-38-1.png" alt="Gestalt Portfolio page 38">
+              <img src="./assets/archive/GESTALTPORTFOLIOFINAL-pages-39-1.png" alt="Gestalt Portfolio page 39">
+              <img src="./assets/archive/GESTALTPORTFOLIOFINAL-pages-40-1.png" alt="Gestalt Portfolio page 40">
+              <img src="./assets/archive/GESTALTPORTFOLIOFINAL-pages-41-1.png" alt="Gestalt Portfolio page 41">
+              <img src="./assets/archive/GESTALTPORTFOLIOFINAL-pages-42-1.png" alt="Gestalt Portfolio page 42">
+              <img src="./assets/archive/GESTALTPORTFOLIOFINAL-pages-43-1.png" alt="Gestalt Portfolio page 43">
+            </div>
+          </div>
+        </div>
+        <div class="work-copy">
+          <h3 class="work-title">gestalt portfolio — deck</h3>
+          <div class="work-notes">
+            <p class="work-note" data-cap="1">[01] Portfolio deck showcasing Gestalt design studies and projects. Mouse-scroll to view all pages.</p>
+          </div>
+        </div>
+      </section>
     </div>
   </div>
 </section>
 
-
-          <!-- Panel: ARCHIVE -->
-          <section class="panel" role="tabpanel" aria-labelledby="tab-archive" data-panel="archive" hidden>
-            <div class="panel-inner">
-              <div class="placeholder">
-                <div class="ph-title">Archive</div>
-                <div class="ph-sub">coming soon</div>
-              </div>
-            </div>
-          </section>
-        </div>
-      </div>
-    </section>
-  </main>
 
   <script src="main.js"></script>
 </body>
